[package]
name = "trusttunnel-deeplink-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
trusttunnel-settings = { path = "../settings" }
trusttunnel-deeplink = { git = "https://github.com/TrustTunnel/TrustTunnel", tag = "v1.0.13" }
toml = "0.7.4"
serde = { version = "1.0.163", features = ["derive"] }
