[package]
name = "setup_wizard"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.3.8"
dialoguer = "0.10.4"
lazy_static = "1.4.0"
once_cell = "1.17.2"
paste = "1.0.12"
rustls = "0.21.1"
rustls-pemfile = "1.0.2"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"
toml_edit = "0.19.10"
x509-parser = "0.15.0"
trusttunnel-deeplink = { git = "https://github.com/TrustTunnel/TrustTunnel", tag = "v1.0.13" }
trusttunnel-settings = { path = "../settings" }

[build-dependencies]
windres = "0.2"
